Remove /lib/tcc from bootstrap

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,8 @@ SRCS= ${SHSRCS} ${GENSRCS} ${GENHDRS}
 OBJS= ${SRCS:.c=.o}
 
 CFLAGS+= -DHAVE_CONFIG_H -I. -I.. -include ../config.h -DBSD=1 -DSHELL -DDEBUG=1 -Wall -g -O2
-CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64 -DCONFIG_TCC_BCHECK=0 -DONE_SOURCE=0
+CFLAGS+= '-DCONFIG_TRIPLET="x86_64-linux-gnu"' -DTCC_TARGET_X86_64 -DONE_SOURCE=0
+CFLAGS+= -DCONFIG_TCC_BCHECK=0 -DCONFIG_TCC_BACKTRACE=0
 
 all: dash
 
