--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -12,7 +12,7 @@ COPY test/test.c /src/test.c
 WORKDIR /src
 RUN cc -print-search-dirs && cc -o test test.c && ./test && rm ./test
 
-RUN for cmd in `sh -c toybox` cc; do \
+RUN for cmd in `sh -c toybox` cc ar; do \
         printf '#!/bin/sh\nexec %s "$@"' "$cmd" > /bin/$cmd; \
         chmod +x /bin/$cmd; \
     done
@@ -21,14 +21,14 @@ ADD https://ftp.gnu.org/gnu/make/make-4.4.tar.gz /src/make-4.4.tar.gz
 WORKDIR /src
 RUN tar -xf make-4.4.tar.gz
 WORKDIR /src/make-4.4
-RUN ./configure --disable-dependency-tracking LD=cc AR="cc -ar" && \
+RUN ./configure --disable-dependency-tracking LD=cc && \
     ./build.sh && ./make && ./make install
 
 ADD https://ftp.gnu.org/gnu/bash/bash-5.2.21.tar.gz /src/bash-5.2.21.tar.gz
 WORKDIR /src
 RUN tar -xf bash-5.2.21.tar.gz
 WORKDIR /src/bash-5.2.21
-RUN ./configure --prefix=/ --without-bash-malloc LD=cc AR="cc -ar" && make && make install
+RUN ./configure --prefix=/ --without-bash-malloc LD=cc && make && make install
 
 
 FROM base AS bootstrap
@@ -49,14 +49,14 @@ WORKDIR /src/perl-5.38.2
 COPY test/perl5.patch /tmp/perl5.patch
 RUN patch -p1 < /tmp/perl5.patch && \
     ./Configure -des -Uusenm -Uusedl -DEBUGGING=both && \
-    make -j$(nproc) AR="cc -ar" && \
+    make -j$(nproc) && \
     make install
 
 ADD https://ftp.gnu.org/gnu/m4/m4-1.4.19.tar.gz /src/m4-1.4.19.tar.gz
 WORKDIR /src
 RUN tar -xf m4-1.4.19.tar.gz
 WORKDIR /src/m4-1.4.19
-RUN ./configure LD=cc AR="cc -ar" && \
+RUN ./configure LD=cc && \
     make && \
     make install
 
@@ -76,19 +76,19 @@ RUN ./configure && \
     make && \
     make install
 
-ADD https://ftp.gnu.org/gnu/libtool/libtool-2.4.7.tar.gz /src/libtool-2.4.7.tar.gz
-WORKDIR /src
-RUN tar -xf libtool-2.4.7.tar.gz
-WORKDIR /src/libtool-2.4.7
-RUN ./configure --disable-shared LD=cc AR="cc -ar" && \
-    make && \
-    make install
+# ADD https://ftp.gnu.org/gnu/libtool/libtool-2.4.7.tar.gz /src/libtool-2.4.7.tar.gz
+# WORKDIR /src
+# RUN tar -xf libtool-2.4.7.tar.gz
+# WORKDIR /src/libtool-2.4.7
+# RUN ./configure --disable-shared LD=cc && \
+#     make && \
+#     make install
 
 ADD https://ftp.gnu.org/gnu/gawk/gawk-5.3.0.tar.gz /src/gawk-5.3.0.tar.gz
 WORKDIR /src
 RUN tar -xf gawk-5.3.0.tar.gz
 WORKDIR /src/gawk-5.3.0
-RUN ./configure --disable-shared LD=cc AR="cc -ar" && \
+RUN ./configure --disable-shared LD=cc && \
     make && \
     make install
 
@@ -96,7 +96,7 @@ ADD https://ftp.gnu.org/gnu/binutils/binutils-2.39.tar.gz /src/binutils-2.39.tar
 WORKDIR /src
 RUN tar -xf binutils-2.39.tar.gz
 WORKDIR /src/binutils-2.39
-RUN ./configure --disable-gprofng CFLAGS='-O2 -D__LITTLE_ENDIAN__=1' AR="cc -ar" && \
+RUN ./configure --disable-gprofng CFLAGS='-O2 -D__LITTLE_ENDIAN__=1' && \
     make MAKEINFO=true && \
     make MAKEINFO=true install
 
