--- a/.gitmodules
+++ b/.gitmodules
@@ -8,5 +8,5 @@
 	path = lib/toybox
 	url = https://github.com/davidar/toybox.git
 [submodule "musl-cross-make"]
-	path = lib/musl-cross-make
+	path = test/musl-cross-make
 	url = https://github.com/richfelker/musl-cross-make.git
