--- a/toybox.config
+++ b/toybox.config
@@ -36,7 +36,7 @@ CONFIG_GREP=y
 CONFIG_EGREP=y
 CONFIG_FGREP=y
 CONFIG_HEAD=y
-CONFIG_ICONV=y
+# CONFIG_ICONV is not set
 CONFIG_ID=y
 # CONFIG_ID_Z is not set
 CONFIG_GROUPS=y
@@ -100,7 +100,7 @@ CONFIG_XARGS=y
 #
 # CONFIG_ARP is not set
 # CONFIG_ARPING is not set
-CONFIG_AWK=y
+# CONFIG_AWK is not set
 # CONFIG_BC is not set
 # CONFIG_BOOTCHARTD is not set
 # CONFIG_BRCTL is not set
@@ -380,9 +380,9 @@ CONFIG_TOYBOX_LSM_NONE=y
 # CONFIG_TOYBOX_LIBCRYPTO is not set
 # CONFIG_TOYBOX_LIBZ is not set
 CONFIG_TOYBOX_FLOAT=y
-CONFIG_TOYBOX_HELP=y
-CONFIG_TOYBOX_HELP_DASHDASH=y
-CONFIG_TOYBOX_ZHELP=y
+# CONFIG_TOYBOX_HELP is not set
+# CONFIG_TOYBOX_HELP_DASHDASH is not set
+# CONFIG_TOYBOX_ZHELP is not set
 # CONFIG_TOYBOX_FREE is not set
 # CONFIG_TOYBOX_NORECURSE is not set
 # CONFIG_TOYBOX_DEBUG is not set
