Remove ps et al

--- a/toybox.config
+++ b/toybox.config
@@ -59,11 +59,11 @@ CONFIG_OD=y
 CONFIG_PASTE=y
 CONFIG_PATCH=y
 CONFIG_PRINTF=y
-CONFIG_PS=y
-CONFIG_TOP=y
-CONFIG_IOTOP=y
-CONFIG_PGREP=y
-CONFIG_PKILL=y
+# CONFIG_PS is not set
+# CONFIG_TOP is not set
+# CONFIG_IOTOP is not set
+# CONFIG_PGREP is not set
+# CONFIG_PKILL is not set
 CONFIG_PWD=y
 CONFIG_RENICE=y
 CONFIG_RM=y
