--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "musl-cross-make"]
 	path = test/musl-cross-make
 	url = https://github.com/richfelker/musl-cross-make.git
+[submodule "cosmopolitan"]
+	path = test/cosmopolitan
+	url = https://github.com/jart/cosmopolitan.git
